# kalshi-weather-bot

./: .env.example  AGENTS.md  README.md  pyproject.toml
configs/: cities.yml  paper_trading.yml  settings.yml
docs/: PROJECT_CONTEXT.md  manual_forecast_distribution_workflow.md  manual_paper_trading_workflow.md
reports/: climatology_baseline_debug_20260326.md  climatology_baseline_run_review_20260326.md  climatology_friction_review_20260326.md  climatology_gated_or_below_0_25_review_20260326.md  climatology_walkforward_review_20260326.md  kalshi_execution_realism_audit_20260326.md
scripts/: fetch_nws_forecast_snapshots_manual.sh  reconcile_paper_monitor_latest.sh  run_forecast_distribution_manual.sh  run_paper_monitor_manual.sh  show_latest_combined_weather_research_summary.sh  show_latest_forecast_distribution_reports.sh  show_latest_paper_reports.sh
tests/: test_backtest_dataset.py  test_baseline_climatology.py  test_bucket_probs.py  test_climate_normals.py  test_combined_weather_research_summary.py  test_compare_climatology_pricing.py  test_evaluate_climatology.py  test_evaluate_climatology_executable.py  test_fees.py  test_fill_logic.py  test_forecast_distribution.py  test_forecast_distribution_manual_workflow.py  test_kalshi_events.py  test_kalshi_market_history.py  test_kalshi_microstructure.py  test_ncei_client.py  test_nws_forecast.py  test_paper_climatology.py  test_reconcile_paper_climatology.py  test_run_climatology_baseline.py  test_run_forecast_distribution.py  test_settlement_windows.py  test_staging_bootstrap.py  test_station_candidates.py  (+4 more)
(+1780 files in other folders)
